2011-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (format_process_status): Always print process name
	even for zombies.
	(get_mem_values): Fix loop fetching working set list to avoid out of
	memory conditions.  Return all mem values set to 0 for zombies.
	* ntdll.h (STATUS_PROCESS_IS_TERMINATING): Define.

2011-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (eval_initial_heap_size): New function fetching the heap
	size from the LoaderFlags field in the PE/COFF header.
	(heap_init): Call eval_initial_heap_size rather than
	cygwin_shared->heap_chunk_size to fetch the initial heap size.
	* shared.cc (shared_info::heap_chunk_size): Remove.
	* shared_info.h (class shared_info): Drop heap_chunk member.
	(CURR_SHARED_MAGIC): Update.

2011-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (STATUS_NOT_FOUND): Define.
	* ntea.cc (read_ea): Return correct ENOTSUP rather than EOPNOTSUPP.
	Handle STATUS_INVALID_DEVICE_REQUEST and STATUS_NOT_FOUND.  Explain
	why.  Convert conditional to switch statement.
	(write_ea): Return correct ENOTSUP rather than EOPNOTSUPP.  Handle
	STATUS_INVALID_DEVICE_REQUEST.  Convert conditional to switch statement.

2011-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* resource.cc (getrlimit): Just return RLIM_INFINITY in a request for
	RLIMIT_AS.

2011-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (format_process_maps): Actually print info about
	the application heap of the printed process, not of the current process.

2011-08-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (socketpair): Release sb0 if there's no space left for sb1.

2011-08-03  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (clock_nanosleep): Export.
	* posix.sgml (std-notimpl): Move clock_nanosleep from here...
	(std-susv4): ... to here.
	(std-notes): Note limitations of clock_nanosleep.
	* signal.cc (clock_nanosleep): Renamed from nanosleep, adding clock_id